# ewm

./: .gitignore  CLAUDE.md  README.md  ewm.el  shell.nix
compositor/: Cargo.toml  run.sh
compositor/src/: cursor.rs  event.rs  im_relay.rs  input.rs  ipc.rs  lib.rs  main.rs  module.rs  render.rs  tracy.rs  utils.rs
compositor/src/backend/: drm.rs  headless.rs  mod.rs  winit.rs
compositor/src/dbus/: display_config.rs  mod.rs  screen_cast.rs  service_channel.rs
compositor/src/pipewire/: mod.rs  stream.rs
compositor/src/protocols/: foreign_toplevel.rs  mod.rs  screencopy.rs  workspace.rs
compositor/src/testing/: client.rs  fixture.rs  mod.rs
compositor/tests/: integration.rs  render.rs
compositor/tests/protocol/: focus.rs  layer_shell.rs  mod.rs  module_interface.rs  xdg_shell.rs
compositor/tests/protocol/snapshots/: integration__protocol__xdg_shell__output_state_snapshot.snap
docs/: CLIPBOARD_DESIGN.md  EVENT_DRIVEN_IPC.md  FOCUS_DESIGN.md  FRACTIONAL_SCALE_DESIGN.md  FRACTIONAL_SCALE_PLAN.md  INPUT_METHODS.md  MODULE_ARCHITECTURE.md  MODULE_MIGRATION.md  MULTI_MONITOR_DESIGN.md  PROTOCOL_ROADMAP.md  RENDER_ARCHITECTURE.md  SCREEN_SHARING_DESIGN.md  TASKS.org  VISION.md  focus-design.md  known-bugs.md  module-architecture.md  multi-monitor-design.md  protocol-roadmap.md  render-architecture.md  screen-sharing-design.md
ewm-compositor/: Cargo.toml
ewm-compositor/src/: cursor.rs  drm_backend.rs  input.rs  main.rs  render.rs
ewm-compositor/src/backend/: drm.rs  mod.rs  winit.rs
lisp/: ewm-consult.el  ewm-input.el  ewm-layout.el  ewm-surface.el  ewm-text-input.el  ewm-transient.el  ewm.el
nix/: default.nix  service.nix
resources/: ewm-shutdown.target  ewm.service
test/: ewm-test.el  test-emacs-ipc.sh  test-layout-sync.sh  test-surface-render.sh
