[package]
name = "ewm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Emacs Wayland Manager - Wayland compositor with Emacs integration"

[dependencies]
anyhow = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
rev = "0c2230f858580b52d628087d6dae1795278b8756"
default-features = false
features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "desktop",
    "renderer_glow",
    "renderer_multi",
    "use_system_lib",
    "wayland_frontend",
    "wayland-protocols-wlr",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay.git"
rev = "0c2230f858580b52d628087d6dae1795278b8756"
default-features = false

# PipeWire for screen sharing (optional)
[dependencies.pipewire]
git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git"
rev = "86df39190c0ab67444666a42908f7e8c1344e24a"
optional = true
features = ["v0_3_33"]

[dependencies.zbus]
version = "5.3"
optional = true

[dependencies.async-io]
version = "2"
optional = true

[dependencies.sd-notify]
version = "0.4"

[features]
default = []
screencast = ["pipewire", "zbus", "async-io"]
