[package]
name = "ewm-compositor"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Wayland compositor with Emacs integration"

[dependencies]
anyhow = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.smithay]
version = "0.7"
default-features = false
features = [
    "backend_winit",
    "desktop",
    "renderer_glow",
    "wayland_frontend",
]
