[package]
name = "ewm"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "Emacs Wayland Manager - Wayland compositor with Emacs integration"

[dependencies]
anyhow = "1"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.smithay]
version = "0.7"
default-features = false
features = [
    "backend_winit",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "desktop",
    "renderer_glow",
    "renderer_multi",
    "use_system_lib",
    "wayland_frontend",
]
